2011-12-25  Vladimir Serbinenko  <phcoder@gmail.com>

	* docs/grub.texi (Filesystems): Mention SFS as Latin1 filesystem.
	* grub-core/fs/sfs.c (grub_sfs_mount): Fix a memory leak while on it.
	(grub_sfs_iterate_dir): Convert Latin1 to UTF8. Stylistic and
	performance fixes while on it.
	(grub_sfs_close): Fix memory leak while on it.
	(grub_sfs_label): Convert Latin1 to UTF-8.

2011-12-25  Vladimir Serbinenko  <phcoder@gmail.com>

	* grub-core/fs/hfs.c (grub_hfs_dir): Cap keylen to actually available
	space to avoid overflows.
	(grub_hfs_label): Convert from macroman to UTF-8.

2011-12-25  Vladimir Serbinenko  <phcoder@gmail.com>

	* grub-core/fs/affs.c (grub_affs_label): Interpret label as latin1.

2011-12-25  Vladimir Serbinenko  <phcoder@gmail.com>

	* grub-core/normal/menu.c (menu_init): Don't stop menu init at gfxterm.

2011-12-25  Vladimir Serbinenko  <phcoder@gmail.com>

	* unicode: Import Unicode 6.0 data.

2011-12-25  Vladimir Serbinenko  <phcoder@gmail.com>

	* grub-core/term/gfxterm.c (grub_gfxterm_putchar): Don't set values
	outside of range.

2011-12-25  Vladimir Serbinenko  <phcoder@gmail.com>

	Avoid cutting in the middle of UTF-8 character.

	* include/grub/charset.h (grub_getend): New function.
	* grub-core/script/function.c (grub_script_function_find): Use
	grub_getend.
	* grub-core/normal/completion.c (add_completion): Likewise.

2011-12-25  Vladimir Serbinenko  <phcoder@gmail.com>

	* grub-core/normal/charset.c (grub_ucs4_to_utf8): Small stylistic fix.
	(grub_bidi_line_logical_to_visual): Skip tags. They are deprecated.
	* include/grub/unicode.h (GRUB_UNICODE_TAG_START): New enum value.
	(GRUB_UNICODE_TAG_END): Likewise.
	(GRUB_UNICODE_LAST_VALID): Likewise.

2011-12-25  Vladimir Serbinenko  <phcoder@gmail.com>

	* include/grub/unicode.h (grub_unicode_compact_range): Replace end with
	len and make it smaller. All users updated.
	* util/import_unicode.py: Put length and not end character.
	Check length.
